<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">QuizApp</string>
    <string name="enter_your_name_here">Enter your name here</string>

    <string name="enter_company_name">Company</string>
    <string name="write_your_answer_here">Write your answer here</string>


    <!-- Questions and answers -->
    <string name="question_1_text">What are the main hazards you can find in the areas marked with the orange line on the ground?</string>
    <string name="answer_1A_text">Explosives Atmospheres</string>
    <string name="answer_1B_text">Carbon Monoxide</string>
    <string name="answer_1C_text">Hydrogen Sulfide (H2S)</string>

    <string name="question_2_text">In case you should notice a dangerous situation, you have to:</string>
    <string name="answer_2A_text">Quit the area as soon as you can</string>
    <string name="answer_2B_text">Report the situation to your Supervisor</string>
    <string name="answer_2C_text">Try to intervene personally to solve the situation</string>

    <string name="question_3_text">Which of the following PPEs are mandatory in the areas marked with the yellow line on the ground?</string>

    <string name="question_4_text">What\'s the internal number to dial in case of emergency?</string>

    <string name="question_5_text">Where is the Assembly point located?</string>
    <string name="spinner5a">Near the solvents storage</string>
    <string name="spinner5b">In the parking area n. 2</string>
    <string name="spinner5c">In front of the QC Lab</string>

    <string name="question_6_text">What kind of dangerous substances are stored in the site?</string>

    <!-- Feedback -->
    <string name="user_company_name_missing">Please insert your name and company name</string>
    <string name="submit">SUBMIT</string>


    <string name="helmet_sign">Helmet Sign</string>
    <string name="respirator_sign">Respirator sign</string>
    <string name="safety_shoes_sign">Safety shoes sign</string>
    <string name="btn_review_safety_rules">Review Safety Rules</string>
    <string name="btn_take_quiz">Take Quiz</string>
    <string name="safety_rules_text">Welcome to the Acme Site in Nowhere City.
        Every visitor must be aware of some basic information on the site and of some simple rules for their own safety.\n\n
        The site is classified at High Risk because of the presence of large quantities of <u>flammable</u>, <u>carcinogen</u> and <u>toxic substances</u>.\n\n
        In the areas marked with a yellow line on the ground the use of <u>Safety Shoes</u> and <u>Helmet</u> is mandatory.\n\n
        In the areas marked with an orange line on the ground specific hazards related to <u>Explosive Atmospheres</u> and <u>Hydrogen Sulfide (H2S)</u> might be present. \n\n
        In case you should notice an <u>unusual event or a dangerous situation</u>, please <u>report it to your supervisor</u> and follow his instructions.\n\n
        In case you should not be able to alert your supervisor, dial the internal number <u>288</u> to report the emergency situation. \n\n
        In case of an emergency, an alarm will sound. In this case reach the assembly point as soon as possible. The <u>Assembly point is located in the parking area n.2</u> \n.

    </string>
    <string name="please_insert_question">Please insert a valid answer for Question</string>
    <string name="positive_feedback">"Congratulations <xliff:g id="name" example="James">%s </xliff:g>. You have correctly answered to all the Questions. \n
       Please refer to your supervisor for further instructions."</string>
    <string name="negative_feedback_1"><xliff:g id="name" example="James">%s </xliff:g>, you have correctly answered to <xliff:g id="num_answers" example="3">%s</xliff:g> questions. \n"</string>
    <string name="negative_feedback_2">Please, check the questions with the number marked in red.</string>
    <string name="welcome_text1">Welcome to the Acme Site in Nowhere City</string>
    <string name="welcome_text2">Every visitor of our site must be aware of some simple safety rules. We ask you to review these rules and answer some simple questions. Thanks for your cooperation.</string>
    <string name="flammable">Flammable</string>
    <string name="carcinogen">Carcinogen</string>
    <string name="clp_pictogram_toxic">CLP_pictogram_toxic</string>
    <string name="clp_pictogram_highly_toxic">CLP_pictogram_highly_toxic</string>
    <string name="very_toxic_on_single_exposure">Very Toxic on Single Exposure</string>
    <string name="clp_pictogram_flammable">CLP_pictogram_flammable</string>
    <string name="main_menu_title">SAFETY INDUCTION QUIZ</string>
    <string name="safety_rules_title">SAFETY RULES</string>
    <string name="quiz_header">Please insert your name and the organization you belong to and answer the following questions. Thanks for your cooperation.</string>


</resources>
