<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainMenu">

    <!-- Navigation Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimaryLight"
        android:gravity="center_vertical">

        <ImageView
            style="@style/navigationHeaderImageStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_business_white_24dp" />

        <TextView
            android:id="@+id/button_back"
            style="@style/navigationHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/main_menu_title" />

    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- parent vertical linear layout which contains everything inside the ScrollView-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView style="@style/myCardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/site_image" />

                    <TextView
                        style="@style/instructionsTextStyleHeader"
                        android:text="@string/welcome_text1" />

                    <TextView
                        style="@style/instructionsTextStyle"
                        android:text="@string/welcome_text2" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/myCardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        style="@style/ButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="openSafetyRules"
                        android:text="@string/btn_review_safety_rules" />

                    <Button
                        style="@style/ButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="openQuizActivity"
                        android:text="@string/btn_take_quiz" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/myCardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/app_version_textview"
                        style="@style/instructionsTextStyle"
                         />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
